UI Schema: 注册数据域 xui-size